--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: oldlace;
+    color: rgb(3, 3, 3);
+}
+
+h1 {
+    color: red;
+}
+
+.bookList {
+    width: 90vw;
+    max-width: 1170px;
+    margin: 2rem auto;
+    display: grid;
+    gap: 2rem;
+}
+
+
+.clickme {
+    font-size: 15px;
+    font-family: Arial;
+    width: 80px;
+    height: 30px;
+    border-width: 1px;
+    color: #fff;
+    border-color: #18ab29;
+    font-weight: bold;
+    border-top-left-radius: 28px;
+    border-top-right-radius: 28px;
+    border-bottom-left-radius: 28px;
+    border-bottom-right-radius: 28px;
+    text-shadow: 1px 1px 0px #2f6627;
+    background: #0a130c;
+}
+
+.clickme:hover {
+    background: #5cbf2a
+}
+
+
+.book {
+    background: white;
+    border-radius: 1rem;
+    padding: 2rem;
+    margin-bottom: 20px;
+}
+
+.book h1 {
+    margin-top: 0.5rem;
+}
+
+
+.giveAuthorName {
+    margin-top: 5px;
+    background-color: #0a130c;
+    text-shadow: #18ab29;
+    color: aliceblue;
+    text-decoration: double;
+    width:fit-content;
+    height: 30px;
+    border-radius: 28px;
+    font-size: medium;
+    font-weight: bold;
+
+}
+
+.giveAuthorName:hover {
+    background-color: red;
 }
